Modify Overall configure template to set up win requirements.

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -199,8 +199,19 @@ h2 {
     margin: 10px 10px;
 }
 
+.outer-border {
+    border: 1px solid #ccc;
+    padding: 10px;
+}
+
 .inner-table {
     border: 1px solid #dddddd;
+}
+
+.unobtrusive {
+    width: 0;
+    height: 0;
+    opacity: 0;
 }
 
 textarea {
