--- a/app/templates/configure/item.html
+++ b/app/templates/configure/item.html
@@ -23,7 +23,7 @@
             <label for="top_level">Show in Overview</label><br>
         </div>
 
-        <div class="sources-container" style="border: 1px solid #ccc; padding: 10px;">
+        <div class="sources-container outer-border">
             <!-- Placeholder for appending new recipes -->
             <div id="recipelist_end" style="width: 0; height: 0; opacity: 0;"></div>
             {% if game_data.items | length > 0 %}
@@ -54,7 +54,7 @@
             {% endfor %}
 
             <!-- Placeholder for appending new attribs -->
-            <div id="attriblist_end" style="width: 0; height: 0; opacity: 0;"></div>
+            <div id="attriblist_end" style="unobtrustive"></div>
             {% if game_data.attribs %}
                 <!-- Select box for adding another attrib -->
                 <div class="select-box">
